data/usersCode/djnfieur/question2/error.txt
/home/gauravghati/clash2/data/usersCode/djnfieur/question2/code2-0.cpp:1:1: error: ‘fkvbodsif’ does not name a type
 fkvbodsif
 ^~~~~~~~~
